--- a/css/max-width-1221.css
+++ b/css/max-width-1221.css
@@ -323,6 +323,10 @@ bottom: 25%;
   padding-bottom: 32px;
 }
 
+img.filter-button{
+  width: 24px;
+  height: auto;
+}
 
 /***************************************************************************************************/
 
@@ -459,8 +463,7 @@ padding-bottom: 20px;
 
 /***********************************************************************************************/
 
-    /* products page */
-
+ 
 
 
 
